--- a/package.json
+++ b/package.json
@@ -1,53 +1,30 @@
 {
-  "name": "react-practice",
+  "name": "cfa-backend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "react-dev": "webpack -d --watch"
+    "start": "server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/elmarek/react-practice-project-1.git"
+    "url": "git+https://github.com/elmarek/cfaBackend.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/elmarek/react-practice-project-1/issues"
+    "url": "https://github.com/elmarek/cfaBackend.git/issues"
   },
-  "homepage": "https://github.com/elmarek/react-practice-project-1#readme",
+  "homepage": "https://github.com/elmarek/cfaBackend.git#readme",
   "dependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.12.7",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "axios": "^0.20.0",
-    "babel-loader": "^8.1.0",
-    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.13",
     "path": "^0.12.7",
-    "prettier": "^2.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
-    "react-scripts": "^4.0.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^5.2.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
-  },
-  "devDependencies": {
-    "ts-loader": "^8.0.14",
-    "typescript": "^4.1.3"
+    "prettier": "^2.1.2"
   }
 }
